--- a/IRL.Web/IRL.Web.csproj
+++ b/IRL.Web/IRL.Web.csproj
@@ -196,7 +196,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -274,6 +273,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IRL.Data\IRL.Data.csproj">
+      <Project>{e5e273b1-0c88-4f88-8cbd-f93e6f4f40f6}</Project>
+      <Name>IRL.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IRL.Models\IRL.Models.csproj">
+      <Project>{f8fc9276-c80b-471f-bf46-ce138b5bbf12}</Project>
+      <Name>IRL.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IRL.Services\IRL.Services.csproj">
+      <Project>{16a4fac0-3c85-4cf5-b331-7af366291352}</Project>
+      <Name>IRL.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
