--- a/IRL.Models/IRL.Models.csproj
+++ b/IRL.Models/IRL.Models.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactCreate.cs" />
+    <Compile Include="ContactListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
