--- a/IRL.Data/IRL.Data.csproj
+++ b/IRL.Data/IRL.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201712111403211_changedDBset.Designer.cs">
       <DependentUpon>201712111403211_changedDBset.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712111455185_Stuff.cs" />
+    <Compile Include="Migrations\201712111455185_Stuff.Designer.cs">
+      <DependentUpon>201712111455185_Stuff.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712111403211_changedDBset.resx">
       <DependentUpon>201712111403211_changedDBset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712111455185_Stuff.resx">
+      <DependentUpon>201712111455185_Stuff.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
