--- a/IRL.Services/IRL.Services.csproj
+++ b/IRL.Services/IRL.Services.csproj
@@ -53,9 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactInterestService.cs" />
     <Compile Include="ContactService.cs" />
     <Compile Include="InterestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuggestionService.cs" />
+    <Compile Include="UserInterestService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
