--- a/IRL.Models/IRL.Models.csproj
+++ b/IRL.Models/IRL.Models.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interest\UserInterest.cs" />
+    <Compile Include="Interest\ContactInterest.cs" />
     <Compile Include="Contact\ContactCreate.cs" />
     <Compile Include="Contact\ContactDetail.cs" />
     <Compile Include="Contact\ContactEdit.cs" />
@@ -60,6 +62,7 @@
     <Compile Include="Interest\InterestDetail.cs" />
     <Compile Include="Interest\InterestListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Suggestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
