--- a/IRL.Data/IRL.Data.csproj
+++ b/IRL.Data/IRL.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201712152037289_fingersCrossed.Designer.cs">
       <DependentUpon>201712152037289_fingersCrossed.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712152127488_really.cs" />
+    <Compile Include="Migrations\201712152127488_really.Designer.cs">
+      <DependentUpon>201712152127488_really.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Suggestion.cs" />
     <Compile Include="UserInterest.cs" />
@@ -86,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712152037289_fingersCrossed.resx">
       <DependentUpon>201712152037289_fingersCrossed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712152127488_really.resx">
+      <DependentUpon>201712152127488_really.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
