--- a/IRL.Web/IRL.Web.csproj
+++ b/IRL.Web/IRL.Web.csproj
@@ -363,6 +363,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-ak.css" />
+    <Content Include="Content\bootstrap-flatly.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -386,6 +387,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap-ak.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
@@ -443,6 +445,7 @@
     <Content Include="Views\Contact\Delete.cshtml" />
     <Content Include="Views\Interest\Index.cshtml" />
     <Content Include="Views\Interest\Select.cshtml" />
+    <Content Include="Views\Contact\_ContIntCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
